--- a/frontend/src/styles/index.css
+++ b/frontend/src/styles/index.css
@@ -28,7 +28,10 @@ body {
 #signup-box {
   background-color: #EDE8F5;
   padding: 22px;
-  border-radius: 20px;
+  border-bottom-left-radius: 10px;
+  border-top-left-radius: 50px;
+  border-bottom-right-radius: 50px;
+  border-top-right-radius: 10px;
   box-shadow: 0 8px 15px rgba(0, 0, 0, 0.4);
   width: 100%;
   max-width: 400px;
@@ -165,13 +168,16 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 9px;
+  padding: 15px;
 }
 
 #login-box {
   background-color: #EDE8F5;
   padding: 22px;
-  border-radius: 20px;
+  border-bottom-left-radius: 10px;
+  border-top-left-radius: 50px;
+  border-bottom-right-radius: 50px;
+  border-top-right-radius: 10px;
   box-shadow: 0 8px 15px rgba(0, 0, 0, 0.4);
   width: 100%;
   max-width: 400px;
@@ -199,7 +205,7 @@ body {
 #login-form {
   display: flex;
   flex-direction: column;
-  gap: 8px;
+  gap: 15px;
 }
 
 #login-label {
